--- a/index.html
+++ b/index.html
@@ -9,22 +9,53 @@
 </head>
 <body>
   <div>
+
     <div>
       <img src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
       <h1>The Seven Wonders of the Ancient World</h1>
       <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
     </div>
-    <div>
+
+    <div class="artemis">
       <img src="Temple_of_Artemis.jpg" alt="">
       <h2>Temple of Artemis</h2>
-      <div>
-        <ul>
-          <
+      <dl>
+        <dt>Date of construction:</dt>
+        <dd>Circa 550 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location:</dt>
+        <dd>Selçuk, Turkey</dd>
+      </dl>
+    </div>
 
+    <div class="colossus">
+      <img src="images/Colossus_of_Rhodes.jpg" alt="">
+      <h2>Colossus of Rhodes</h2>
+      <dl>
+        <dt>Date of construction:</dt>
+        <dd>292-280 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location:</dt>
+        <dd>Rhodes, Greece</dd>
+      </dl>
+    </div>
 
+    <div class="babylon">
+      <img src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+      <h2>Hanging Gardens of Babylon</h2>
+      <dl>
+        <dt>Date of construction:</dt>
+        <dd>Circa 600 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Babylonians</dd>
+        <dt>Location:</dt>
+        <dd>Nineveh, Iraq</dd>
+      </dl>
+    </div>
 
-
-
+  </div>
 </body>
 </html>
