--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
+        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
         <h1>The Seven Wonders of the Ancient World</h1>
         <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
@@ -22,7 +22,7 @@
 
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img.flex" src="Temple_of_Artemis.jpg" alt="">
+        <img class="img.flex" src="images/temple-of-artemis.jpg.jpg" alt="">
         <h2>Temple of Artemis</h2>
         <dl>
           <dt>Date of construction:</dt>
@@ -37,7 +37,7 @@
 
     <div class="colossus">
       <figure>
-        <img class="img.flex" src="images/Colossus_of_Rhodes.jpg" alt="">
+        <img class="img.flex" src="images/colossus-of-rhodes.jpg" alt="">
         <h2>Colossus of Rhodes</h2>
         <dl>
           <dt>Date of construction:</dt>
@@ -52,7 +52,7 @@
 
     <div class="babylon">
       <figure>
-        <img class="img.flex" src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+        <img class="img.flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
         <h2>Hanging Gardens of Babylon</h2>
         <dl>
           <dt>Date of construction:</dt>
