--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 
   <div class="grid">
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1 m-1 l-1">
       <figure>
         <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
         <h1>The Seven Wonders of the Ancient World</h1>
@@ -20,9 +21,9 @@
       </figure>
     </div>
 
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1 m-1-3 l-1-4">
       <figure>
-        <img class="img.flex" src="images/temple-of-artemis.jpg.jpg" alt="">
+        <img class="img.flex" src="images/temple-of-artemis.jpg" alt="">
         <h2>Temple of Artemis</h2>
         <dl>
           <dt>Date of construction:</dt>
@@ -35,7 +36,7 @@
       </figure>
     </div>
 
-    <div class="colossus">
+    <div class="colossus unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img.flex" src="images/colossus-of-rhodes.jpg" alt="">
         <h2>Colossus of Rhodes</h2>
@@ -50,7 +51,7 @@
       </figure>
     </div>
 
-    <div class="babylon">
+    <div class="babylon unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img.flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
         <h2>Hanging Gardens of Babylon</h2>
