--- a/index.html
+++ b/index.html
@@ -12,57 +12,65 @@
 
   <div class="grid">
 
-    <div class="unit xs-1 s-1 m-1 l-1">
-      <figure>
+    <div>
+      <div class="unit xs-1 s-1 m-1 l-2-3">
         <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
+      </div>
+      <div class="unit xs-1 s-1 m-1 l-1-3">
         <h1>The Seven Wonders of the Ancient World</h1>
         <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
         <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-      </figure>
+      </div>
     </div>
 
-    <div class="unit xs-1 s-1 m-1-3 l-1-4">
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
       <figure>
         <img class="img.flex" src="images/temple-of-artemis.jpg" alt="">
-        <h2>Temple of Artemis</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>Circa 550 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Selçuk, Turkey</dd>
-        </dl>
+        <figcaption>
+          <h2>Temple of Artemis</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 550 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+          </dl>
+        </figcaption>
       </figure>
     </div>
 
-    <div class="colossus unit xs-1 s-1-2 m-1-3 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
         <img class="img.flex" src="images/colossus-of-rhodes.jpg" alt="">
-        <h2>Colossus of Rhodes</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>292-280 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Rhodes, Greece</dd>
-        </dl>
+        <figcaption>
+          <h2>Colossus of Rhodes</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>292-280 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+          </dl>
+        </figcaption>
       </figure>
     </div>
 
-    <div class="babylon unit xs-1 s-1-2 m-1-3 l-1-4">
+    <div class="babylon unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
         <img class="img.flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
-        <h2>Hanging Gardens of Babylon</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>Circa 600 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-          <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-        </dl>
+        <figcaption>
+          <h2>Hanging Gardens of Babylon</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 600 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+            <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+          </dl>
+        </figcaption>
       </figure>
     </div>
 
