--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
 
@@ -25,7 +25,7 @@
 
     <div class="unit xs-1 s-1 m-1-3 l-1-3">
       <figure>
-        <img class="img.flex" src="images/temple-of-artemis.jpg" alt="">
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
         <figcaption>
           <h2>Temple of Artemis</h2>
           <dl>
@@ -42,7 +42,7 @@
 
     <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
-        <img class="img.flex" src="images/colossus-of-rhodes.jpg" alt="">
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
         <figcaption>
           <h2>Colossus of Rhodes</h2>
           <dl>
@@ -59,7 +59,7 @@
 
     <div class="babylon unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
-        <img class="img.flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
         <figcaption>
           <h2>Hanging Gardens of Babylon</h2>
           <dl>
@@ -74,6 +74,7 @@
       </figure>
     </div>
 
-  </article>
+  </div>
+
 </body>
 </html>
